When baseline pairs are missing for one or more features associated with a pool, warn rather than throw an exception.
Refs #112945